  @vdblink::ValueTraits ValueTraits@endlink type traits to complement
  @vdblink::VecTraits VecTraits@endlink and added an
  @vdblink::IsSpecializationOf IsSpecializationOf@endlink
  helper metafunction.
- Added support for @vdblink::Vec4SMetadata Vec4s@endlink,
  @vdblink::Vec4DMetadata Vec4d@endlink
  and @vdblink::Vec4IMetadata Vec4i@endlink metadata.

@par
Improvements:
- Significantly improved the performance of point data grid string attribute
  generation.
- @vdblink::points::AttributeArray::copy() AttributeArray::copy@endlink
  and the copy assignment operator for AttributeArrays are now thread-safe.
- The command-line tools (<TT>vdb_print</TT>, etc.) now include
  the library ABI version in their <TT>-version</TT> output.

@par
Bug fixes:
- Fixed a bug in the @link tools/Clip.h clip@endlink tool that caused
  some grid metadata to be discarded.
- Added a check to @vdblink::points::setGroup() points::setGroup@endlink
  to compare the maximum index of the provided
  @vdblink::tools::PointIndexTree PointIndexTree@endlink
  to the size of the membership vector.
- Fixed a race condition when moving points in point data grids for ABI=6+
  due to non-const access of AttributeArrays resulting in a copy-on-write.
- Fix bug with MeshToVoxel consuming infinite memory when giving NaNs.

@par
Houdini:
- The Points&nbsp;Convert SOP now reports NaN Positions as warnings when
  converting from Houdini Points to VDB Points.
- Fixed a bug where the Points&nbsp;Convert&nbsp;SOP was incorrectly ignoring
  point attributes with the same name as an existing point group.
- The Transform&nbsp;SOP now supports frustum transforms by applying the
  transformation to the internal affine map.

@par
Python:
- Added limited support for @ref secPtContents "point data grids",
  comprising I/O and metadata functionality for now.
- Added support for @vdblink::Mat4SMetadata Mat4s@endlink
  and @vdblink::Mat4DMetadata Mat4d@endlink metadata, in the form of nested